# Linea

./: CHECKLIST.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  SECURITY.md  SUPPORT.md  package.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  ROADMAP.md
src/: App.css  App.tsx  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: FileExplorer.css  FileExplorer.tsx  Icons.tsx
